# EasyRent

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_DOCUMENTATION_RU.md  API_DOKUMENTATION_DE.md  Dockerfile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
EasyRent/: asgi.py  settings.py  urls.py  wsgi.py
src/: routes.py
src/apartments/: apps.py
src/apartments/dtos/: __init__.py  listing.py  review.py  search.py
src/apartments/migrations/: 0001_initial.py  0002_alter_listing_housing_type.py  0003_listing_cancellation_deadline_days.py  0004_listingview.py  0005_searchhistory.py
src/apartments/models/: __init__.py  listing.py  listingview.py  review.py  search_history.py
src/apartments/services/: __init__.py  search.py  view.py
src/apartments/urls/: __init__.py
src/apartments/views/: __init__.py  listing.py  search.py
src/authentication/: apps.py  dtos.py  jwt_middleware.py  jwt_old.py  models.py  signals.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py  0002_alter_profile_role.py  0003_alter_profile_role.py  0004_alter_profile_options_alter_profile_role_and_more.py
src/booking/: dtos.py  models.py  urls.py  views.py
src/booking/migrations/: 0001_initial.py
src/choices/: __init__.py  base.py
src/permissions/: __init__.py  bookings.py  listings.py  review.py  users.py
