[project]
name = "easyrent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.5",
    "django-environ==0.12.0",
    "djangorestframework==3.16.0",
    "django-filter==25.1",
    "mysqlclient==2.2.7",
    "djangorestframework-simplejwt==5.5.1",
]
